--- a/res/layout/drawer_profile.xml
+++ b/res/layout/drawer_profile.xml
@@ -7,19 +7,17 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"
+        android:layout_weight="3"
         android:background="@drawable/profile_background"
         android:orientation="horizontal" >
 
         <ImageView
             android:id="@+id/profile_account_picture"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_width="@dimen/profile_picture_size"
+            android:layout_height="@dimen/profile_picture_size"
             android:adjustViewBounds="true"
-            android:paddingBottom="@dimen/profile_picture_vertical_margin"
-            android:paddingLeft="@dimen/profile_picture_horizontal_margin"
-            android:paddingRight="@dimen/profile_picture_horizontal_margin"
-            android:paddingTop="@dimen/profile_picture_vertical_margin"
+			android:layout_marginLeft="@dimen/profile_picture_leftmargin"
+			android:layout_gravity="center_vertical"
             android:src="@drawable/face_patrick" />
 
         <TextView
@@ -27,7 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
-            android:paddingLeft="@dimen/profile_name_indent"
+            android:paddingLeft="@dimen/profile_name_leftmargin"
             android:text="@string/user_full_name"
             android:textColor="#ffffffff"
             android:textSize="@dimen/profile_name_font_size" />
@@ -37,7 +35,7 @@
         android:id="@+id/indicator"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_weight="0.9" />
 
     <RelativeLayout
         android:layout_width="match_parent"
