--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -4,9 +4,9 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
-	<dimen name="profile_picture_vertical_margin">20dp</dimen>
-	<dimen name="profile_picture_horizontal_margin">40dp</dimen>
-	<dimen name="profile_name_indent">60dp</dimen>
+    <dimen name="profile_picture_size">120dp</dimen>
+	<dimen name="profile_picture_leftmargin">50dp</dimen>
+	<dimen name="profile_name_leftmargin">90dp</dimen>
 	<dimen name="profile_name_font_size">35sp</dimen>
 	
 	<dimen name="itinlist_allpadtop">10dp</dimen>
@@ -22,23 +22,27 @@
 	<dimen name="itinlist_date_size">20sp</dimen>
 	<dimen name="itinlist_comment_size">20sp</dimen>
 	
-	<dimen name="explist_allpadtop">15dp</dimen>
-	<dimen name="explist_allpadbottom">15dp</dimen>
-    <dimen name="explist_totalheight">130dp</dimen>
-	<dimen name="explist_imageheight">100dp</dimen>
-	<dimen name="explist_imagewidth">120dp</dimen>
-	<dimen name="explist_imagepadleft">15dp</dimen>
-	<dimen name="explist_imagepadright">5dp</dimen>
-	<dimen name="explist_textheight">110dp</dimen>
-	<dimen name="explist_textwidth">380dp</dimen>
-	<dimen name="explist_textpadleft">10dp</dimen>
-	<dimen name="explist_name_size">25sp</dimen>
-	<dimen name="explist_action_size">17sp</dimen>
-	<dimen name="explist_comment_size">17sp</dimen>
-	<dimen name="explist_itin_name_size">30sp</dimen>
-	<dimen name="explist_dragimagewidth">60dp</dimen>
-	<dimen name="explist_dragimageheight">40dp</dimen>
-	<dimen name="explist_dragimagepad">15dp</dimen>
+	<dimen name="explist_titleheight">40dp</dimen>
+	<dimen name="explist_itinnamesize">25sp</dimen>
+	<dimen name="explist_personnamesize">20sp</dimen>
+	<dimen name="explist_tab_textsize">20sp</dimen>
+	<dimen name="explist_tab_height">50dp</dimen>
+	<dimen name="explist_item_allpadtop">15dp</dimen>
+	<dimen name="explist_item_allpadbottom">15dp</dimen>
+    <dimen name="explist_item_totalheight">130dp</dimen>
+	<dimen name="explist_item_imageheight">100dp</dimen>
+	<dimen name="explist_item_imagewidth">120dp</dimen>
+	<dimen name="explist_item_imagepadleft">15dp</dimen>
+	<dimen name="explist_item_imagepadright">5dp</dimen>
+	<dimen name="explist_item_textheight">110dp</dimen>
+	<dimen name="explist_item_textwidth">380dp</dimen>
+	<dimen name="explist_item_textpadleft">10dp</dimen>
+	<dimen name="explist_item_namesize">25sp</dimen>
+	<dimen name="explist_item_actionsize">17sp</dimen>
+	<dimen name="explist_item_commentsize">17sp</dimen>
+	<dimen name="explist_item_dragimagewidth">60dp</dimen>
+	<dimen name="explist_item_dragimageheight">40dp</dimen>
+	<dimen name="explist_item_dragimagepad">15dp</dimen>
 	
 	<dimen name="searchresultlist_allpadtop">15dp</dimen>
 	<dimen name="searchresultlist_allpadbottom">15dp</dimen>
