--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -11,6 +11,8 @@
 	
 	<dimen name="itinlist_allpadtop">10dp</dimen>
 	<dimen name="itinlist_allpadbottom">10dp</dimen>
+	<dimen name="itinlist_sectionheight">50dp</dimen>
+	<dimen name="itinlist_sectiontextsize">25sp</dimen>
     <dimen name="itinlist_totalheight">150dp</dimen>
 	<dimen name="itinlist_imageheight">130dp</dimen>
 	<dimen name="itinlist_imagewidth">130dp</dimen>
