--- a/res/layout/profile_tab_itins.xml
+++ b/res/layout/profile_tab_itins.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -8,13 +9,30 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin" >
 
-    <ListView
-        android:id="@+id/profile_itins_itinList"
+    <TextView 
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/itinlist_sectionheight"
+        android:text="Current Itinerary" />
+    
+    <View
+        android:id="@+id/profile_itins_currentItin"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/itinlist_totalheight"
+        />
+    
+    <TextView 
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/itinlist_sectionheight"
+        android:text="Past Itinerary" />
+    
+    <ListView
+        android:id="@+id/profile_itins_pastItinList"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:layout_gravity="top"
         android:divider="@android:color/transparent"
   		android:dividerHeight="10dp">
     </ListView>
 
-</FrameLayout>
+</LinearLayout>
