--- a/res/layout/list_item_itinsection.xml
+++ b/res/layout/list_item_itinsection.xml
@@ -2,14 +2,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/itinlist_sectionheight"
-    android:background="#62a5d4" >
+    android:background="@android:color/transparent" >
     
     <TextView 
         android:id="@+id/itinlist_sectionname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-       	android:textSize="@dimen/itinlist_sectiontextsize"/>
+        android:gravity="left"
+       	android:textSize="@dimen/itinlist_sectiontextsize"
+       	android:paddingLeft="4dp"/>
     
 
 </RelativeLayout>
