--- a/res/layout/list_item_itinsection_current.xml
+++ b/res/layout/list_item_itinsection_current.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:gravity="left"
        	android:textSize="@dimen/itinlist_sectiontextsize"
+       	android:textColor="#aa000000"
        	android:paddingLeft="4dp"/>
     
 
