--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -6,12 +6,16 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
-    
+    <item
+        android:id="@+id/menu_action_clearcurrentitin"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="clear"/>
     <item
         android:id="@+id/menu_action_search"
-        android:title="@string/menu_action_search"
+        android:actionViewClass="android.widget.SearchView"
         android:icon="@drawable/ic_search"
         android:showAsAction="collapseActionView|ifRoom"
-        android:actionViewClass="android.widget.SearchView" />
+        android:title="@string/menu_action_search"/>
 
 </menu>
